# ispc-downsampler

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  release.toml
.github/workflows/: build.yaml  generate-binaries.yaml  publish.yaml
benches/: basic.rs
examples/: test.rs
src/: lib.rs
src/ispc/: downsample_ispc.rs  downsample_ispcaarch64-pc-windows-msvc.lib  downsample_ispcx86_64-pc-windows-msvc.lib  mod.rs
src/ispc/kernels/: downsampling.ispc  formats.ispc  image.ispc  lanczos3.ispc  linearization.ispc  math.ispc  rescale_alpha.ispc  weight_dimensions.ispc  weights.ispc
src/ispc/kernels/filters/: lanczos.ispc
