[package]
name = "ispc-downsampler"
version = "0.2.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Image downsampler crate using ISPC"
documentation = "https://docs.rs/ispc-downsampler"
homepage = "https://github.com/Traverse-Research/ispc-downsampler"
repository = "https://github.com/Traverse-Research/ispc-downsampler"
include = [
    "/src/",
    "/build.rs",
    "/benches/",
    "/examples/",
    "/README.md",
    "/LICENSE-*",
]

[dependencies]
ispc_rt = "2"

[build-dependencies]
ispc_compile = { version = "2.0.1", optional = true }
ispc_rt = "2"

[dev-dependencies]
image = "0.24.1"
stb_image = "0.3.0"
criterion = "0.5"
resize = "0.7"
fallible_collections = "0.4.5"

[[bench]]
name = "basic"
harness = false

[features]
ispc = ["ispc_compile"]
